changed links to wrap correctly when needed

--- a/css/styles.css
+++ b/css/styles.css
@@ -295,9 +295,3 @@ figcaption {
     height: 100%;
   }
 }
-
-@media only screen and (max-width: 360px){
-  .link {
-    white-space: normal;
-  }
-}
